backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_request_workflow_source_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
assertion_line: 80
expression: json
---
{
  "args": {
    "content": "test",
    "path": "/output.txt"
  },
  "request_id": "req-999",
  "source": {
    "step_index": 0,
    "step_name": "analyze",
    "type": "workflow",
    "workflow_id": "wf-001",
    "workflow_name": "git_commit"
  },
  "tool_name": "write_file",
  "type": "tool_request"
}
