backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_result_failure_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "tool_result",
  "tool_name": "write_file",
  "result": {
    "error": "Permission denied"
  },
  "success": false,
  "request_id": "req-result-2",
  "source": {
    "type": "main"
  }
}
