backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_source_main_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "main"
}
