backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_source_sub_agent_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "sub_agent",
  "agent_id": "agent-001",
  "agent_name": "code_analyzer"
}
