backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_source_workflow_with_step_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
assertion_line: 542
expression: json
---
{
  "step_index": 0,
  "step_name": "analyze",
  "type": "workflow",
  "workflow_id": "wf-001",
  "workflow_name": "git_commit"
}
