backend/crates/qbit/tests/snapshots/ai_events_characterization__tool_source_workflow_without_step_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "workflow",
  "workflow_id": "wf-001",
  "workflow_name": "git_commit"
}
