backend/crates/qbit/tests/snapshots/ai_events_characterization__workflow_completed_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
assertion_line: 420
expression: json
---
{
  "final_output": "Commit created successfully",
  "total_duration_ms": 8500,
  "type": "workflow_completed",
  "workflow_id": "wf-001"
}
