backend/crates/qbit/tests/snapshots/ai_events_characterization__workflow_error_with_step_serialization.snap
---
source: crates/qbit/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "workflow_error",
  "workflow_id": "wf-001",
  "step_name": "commit",
  "error": "Git commit failed"
}
